--- a/src/Styles/Eventdetails.css
+++ b/src/Styles/Eventdetails.css
@@ -125,6 +125,44 @@
     align-items: center;
 }
 
+/*Newly added styles for the upper submit button*/
+.button-calendar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 25px;
+}
+.button-calendar>.final-btn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.button-calendar>.final-btn>a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button-calendar>.final-btn>.submit-btn-event,.button-calendar>.final-btn>a>.submit-btn-event{
+    background-image:linear-gradient(90deg, #b224b4,#6f05c5);
+    width: fit-content;
+    padding: 3px;
+    border-radius: 50px;
+    color:white;
+    margin: 0;
+    text-align: center;
+}
+.button-calendar>.final-btn>.submit-btn-event>div,.button-calendar>.final-btn>a>.submit-btn-event>div{
+    width: 100%;
+    border-radius: 50px;
+    padding: 18px 50px;
+    font-size: 14px;
+    font-weight: 800;
+    
+    cursor: pointer;
+}
+
+
 .e-description {
     color: var(--fg-white);
     line-height: 27px;
