--- a/src/Styles/AboutUs.css
+++ b/src/Styles/AboutUs.css
@@ -21,8 +21,28 @@
 .twoy {
 }
 .twoy > img {
-  width: 200px;
+  margin-left:100px;
+  width: 350px;
+  height:200px;
+  border-radius: 10px;
+  margin-top: 30px;
+
 }
+.twoy1 {
+  margin-left: 110px;
+  width: 900px; /* Adjust this value as needed */
+  height: 350px;
+  border-radius: 10px;
+}
+
+.twoy1 lottie-player {
+  width: 100%;
+  height: 100%;
+  padding:0;
+}
+
+
+
 .conatinerx {
   display: flex;
   flex-direction: row;
@@ -74,6 +94,9 @@
   margin-top: 4%;
   margin-bottom: 7%;
   font-family: gilroy-thin;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .lottie-player {
   max-width: 90%;
@@ -328,5 +351,68 @@
 
   .robot{
     display: none;
+  }
+}
+
+
+.left-container,
+.left-container2 {
+  max-width: 48%;
+}
+.right-container {
+  max-width: 48%;
+}
+
+.left-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.right-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+
+.right-container a img {
+  width: 100%; 
+  height: 100%; /* Adjust the width as needed */
+  max-width: 480px; /* Set a maximum width for the image */
+  border-radius: 10px;
+  margin-top: 30px;
+  transition: box-shadow 0.3s ease;
+  /* Add any additional styles you need */
+}
+.right-container a img:hover {
+  box-shadow: 0 0 40px rgba(89, 207, 164, 0.7);  /* #59cfa4 with some opacity */
+}
+
+/* Styles for the Lottie player in the left-container2 */
+.left-container2 lottie-player {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+bbbbbbbbbbbbbb 
+/* Additional styling for spacing and alignment if needed */
+.contentx {
+  margin: 40px auto;
+}
+
+
+@media screen and (max-width: 900px) {
+  .contentx {
+    flex-direction: column;
+  }
+
+  .left-container,
+  .left-container2,
+  .right-container {
+    width: 100%;
+  }
+  .left-container lottie-player {
+    max-height: 200px;
   }
 }
