--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -62,6 +62,12 @@ justify-content: center;
     box-shadow: 0 0 30px rgba(77, 175, 28, 0.7);
     z-index: 100;
 }
+
+.button {
+    background-color: transparent;
+    /* Other button styles */
+  }
+  
 .add-green{
     width: 100%;
     height:0px;
@@ -90,6 +96,8 @@ justify-content: center;
 }
 .explore-btn{
     margin-top: 00px;
+    display: flex;
+    justify-content: center;
 }
 
 /* below 900px */
@@ -113,4 +121,45 @@ justify-content: center;
         margin-top: 40px !important;
         margin-bottom: 80px;
     }
+   
+@media screen and (max-width: 768px) {
+    .home.main-section {
+      /* Adjust styles for smaller screens */
+      padding-top: 0; /* Example adjustment */
+      padding-bottom: 0; /* Example adjustment */
+    }
+  
+    .legend {
+      /* Adjust styles for smaller screens */
+      max-width: 200px; /* Example adjustment */
+      font-size: 14px; /* Example adjustment */
+      margin-left: 10px; /* Example adjustment */
+    }
+  
+    /* Force carousel to display in portrait mode */
+    .carousel .slider-wrapper {
+      width: 100% !important;
+      height: 100vh !important; /* Cover the full viewport height */
+    }
+  
+    /* Adjust carousel item to fit portrait mode */
+    .carousel .slider-wrapper .slider {
+      width: 100% !important;
+      height: 100% !important;
+    }
+  
+
+    .carousel .slider-wrapper .slider img {
+      height: 100%;
+      width: auto;
+      object-fit: cover;
+    }
+    .button {
+
+        padding: 10px 20px;
+      }
+  }
+  
+  
+  
 }
