--- a/src/Styles/WebDevs.css
+++ b/src/Styles/WebDevs.css
@@ -30,7 +30,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap:13px;
-    margin-top: 120px;
+    /* margin-top: 50px; */
 }
 .web-card{
     background-color:rgba(26, 25, 25, 0.3);
