--- a/src/Styles/ContactUs.css
+++ b/src/Styles/ContactUs.css
@@ -91,11 +91,6 @@
     text-align: center;
 }
 
-.submit {   
-    color:white;
-    border-radius: 50px;
-    text-align: center; 
-}
     /* Existing styles for desktop screens */
 
     @media only screen and (max-width: 900px) {
@@ -144,12 +139,8 @@
             margin-right: auto; /* Center-align input and textarea */
         }
 
-        .submit {   
-
-        }
-
         .mobile-container {
-            position: absolute;
+            position: flex;
             top: -20px;
             right: 20px;
             font-size: 16px;
@@ -157,5 +148,3 @@
             color: white;
         }
     }
-
-
