--- a/src/Styles/Eventdetails.css
+++ b/src/Styles/Eventdetails.css
@@ -30,15 +30,12 @@
 }
 
 .eventdetails-container {
-    /* max-width: 800px;
-    margin: auto; */
     margin-top: 70px;
 }
 
 .one {
     min-width: 100%;
     object-fit: cover;
-
 }
 
 .one>img {
@@ -71,7 +68,7 @@
     height: 400px;
     border-radius: 40px;
     overflow: hidden;
-    object-fit:cover;
+    object-fit: cover;
     border-radius: 3px;
     overflow: hidden;
     display: flex;
@@ -115,9 +112,10 @@
     font-size: 40px;
     font-weight: bold;
     color: var(--fg-black);
-   
+
 }
-.e-title{
+
+.e-title {
     margin-bottom: 10px;
     display: flex;
     flex-direction: row;
@@ -126,42 +124,46 @@
 }
 
 /*Newly added styles for the upper submit button*/
-.button-calendar{
+.button-calendar {
     display: flex;
     justify-content: space-around;
     align-items: center;
     gap: 25px;
 }
-.button-calendar>.final-btn{
+
+.button-calendar>.final-btn {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-.button-calendar>.final-btn>a{
+
+.button-calendar>.final-btn>a {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.button-calendar>.final-btn>.submit-btn-event,.button-calendar>.final-btn>a>.submit-btn-event{
-    background-image:linear-gradient(90deg, #b224b4,#6f05c5);
+
+.button-calendar>.final-btn>.submit-btn-event,
+.button-calendar>.final-btn>a>.submit-btn-event {
+    background-image: linear-gradient(90deg, #b224b4, #6f05c5);
     width: fit-content;
     padding: 3px;
     border-radius: 50px;
-    color:white;
+    color: white;
     margin: 0;
     text-align: center;
 }
-.button-calendar>.final-btn>.submit-btn-event>div,.button-calendar>.final-btn>a>.submit-btn-event>div{
+
+.button-calendar>.final-btn>.submit-btn-event>div,
+.button-calendar>.final-btn>a>.submit-btn-event>div {
     width: 100%;
     border-radius: 50px;
     padding: 18px 50px;
     font-size: 14px;
     font-weight: 800;
-    
     cursor: pointer;
 }
-
 
 .e-description {
     color: var(--fg-white);
@@ -179,6 +181,7 @@
     line-height: 40px;
     margin-top: 20px;
 }
+
 .e-description-m {
     color: var(--fg-white);
     line-height: 27px;
@@ -186,53 +189,64 @@
     font-weight: 700;
     font-family: var(--font-secondary);
 }
-.trophies{
+
+.trophies {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 100px;
+    margin-top: 40px;
     gap: 100px;
     font-size: 14px;
     font-weight: 500;
     margin-bottom: 30px;
 
 }
-.rules{
+
+.rules {
     padding-left: 25px;
 }
-.trophies>div>i{
+
+.trophies>div>i {
     font-size: 90px;
     margin-bottom: 10px;
 }
-.cen{
+
+.cen {
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-items: center;
     align-items: center;
 }
-.silver-trophy>i{
+
+.silver-trophy>i {
     color: silver;
 }
-.gold-trophy>i{
+
+.gold-trophy>i {
     color: gold;
 }
-.gold-trophy{
-    
+
+.gold-trophy {
+
     transform: scale(1.5);
-    transform:translateY(0px);
+    transform: translateY(0px);
 }
-.bronze-trophy>i{
+
+.bronze-trophy>i {
     color: #cd7f32;
 }
-.e-description-m>ul>li{
+
+.e-description-m>ul>li {
     color: var(--fg-white);
     margin-bottom: 10px;
     font-weight: 700;
 }
-.google-calendar{
+
+.google-calendar {
     cursor: pointer;
 }
-.submit-btn-event{
+
+.submit-btn-event {
     background-color: var(--fg-green);
     color: var(--bg-white);
     border: none;
@@ -244,18 +258,20 @@
     width: max-content;
 
 }
-.submit-btn-event{
-    background-image:linear-gradient(90deg, #24B47E,#50e40c) !important;
+
+.submit-btn-event {
+    background-image: linear-gradient(90deg, #24B47E, #50e40c) !important;
     width: fit-content;
     padding: 3px;
     border-radius: 50px;
-    color:white;
+    color: white;
     margin-top: 60px;
     margin-left: 10px;
-    margin-bottom:90px;
+    margin-bottom: 90px;
     text-align: center;
 }
-.submit-btn-event>div{
+
+.submit-btn-event>div {
     width: 100%;
     background-color: var(--bg-black);
     border-radius: 50px;
@@ -265,16 +281,18 @@
     cursor: pointer;
 
 }
-.final-btn{
+
+.final-btn {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 
 }
-.manager-profile-container{
+
+.manager-profile-container {
     width: 200px;
-    height:300px;
+    height: 300px;
     background-color: rgba(47, 48, 48, 0.2);
     box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
     border-radius: 5px;
@@ -286,25 +304,29 @@
     align-items: center;
     position: relative;
     overflow: hidden;
-   
+
 }
-.img-hover{
+
+.img-hover {
     border: 5px solid white !important;
     border-radius: 50%;
     z-index: 99;
 }
-.manager-profile-image{
-    width:85px;
-    height:100px;
+
+.manager-profile-image {
+    width: 85px;
+    height: 100px;
     border: 0px solid white;
     transition: all 0.24s ease-in-out;
 }
-.manager-profile-name{
+
+.manager-profile-name {
     font-size: 20px;
     font-weight: 700;
     color: var(--fg-white);
 }
-.manager-profile-description{
+
+.manager-profile-description {
     color: var(--fg-white);
     line-height: 27px;
     margin-bottom: 10px;
@@ -312,7 +334,7 @@
     text-align: center;
 }
 
-.manager-social-links{
+.manager-social-links {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -324,71 +346,131 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    gap:20px;
+    gap: 20px;
     transition: all 0.24s ease-in-out;
     overflow: hidden;
 }
-.social-hover{
+
+.social-hover {
     height: 40px;
 }
-.social-hover>i{
+
+.social-hover>i {
     cursor: pointer;
 }
-.circle{
+
+.circle {
     position: absolute;
     background-color: var(--fg-green);
     border-radius: 50%;
     width: 300px;
     height: 200px;
-    top:-800px;
+    top: -800px;
     transition: all 0.24s ease-in-out;
 }
-.circle-hover{
-    top:-80px
+
+.circle-hover {
+    top: -80px
 }
-.managers{
+
+.managers {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    gap:60px;
+    gap: 60px;
     margin-top: 40px;
     flex-wrap: wrap;
 }
-.faq{
+
+
+.faq {
     margin-top: 50px;
 }
-.fq-header{
-    margin-top: 80px !important;
+
+.faq-header {
+    font-size: 30px;
+    color: var(--fg-green);
+    font-weight: 700;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    letter-spacing: -1.3px;
+    font-weight: 900;
 }
+
+.faq-card {
+    cursor: pointer;
+    max-width: 700px;
+
+    border: 2px solid rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
+
+.faq-question {
+    color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    font-weight: 600;
+    justify-content: space-between;
+    align-items: center;
+    font-family: var(--font-secondary);
+
+}
+
+.down-icon {
+    cursor: pointer;
+    font-weight: 900;
+}
+
+.faq-answer {
+    color: rgba(255, 255, 255, 1);
+    padding-top: 5px;
+    font-family: var(--font-secondary);
+    font-weight: 600;
+}
+
 @media only screen and (max-width: 900px) {
-    .eventdetails{
-        padding:0px ;
+
+    .one > img {
+        width: 100%;
+        max-height: 300px;
+        object-fit: cover;
+    }
+
+    .eventdetails {
+        padding: 0px;
         margin-top: 40px;
     }
-    .back-btn-container{
+
+    .back-btn-container {
         display: none;
     }
-    .event-content-container{
+
+    .event-content-container {
         max-width: 90%;
-        margin-top: 90px;
+        margin-top: 50px;
     }
-        
-    .image-container{
+
+    .image-container {
         flex-wrap: wrap;
         height: auto;
     }
-    .trophies{
+
+    .trophies {
         gap: 20px;
     }
-    .trophies>div>i{
+
+    .trophies>div>i {
         font-size: 60px;
         margin-bottom: 10px;
     }
-    .button-calendar .final-btn{
+
+    .button-calendar .final-btn {
         display: none;
     }
 }
-.highlight{
+
+.highlight {
     color: #24B47E;
 }
