--- a/src/App.css
+++ b/src/App.css
@@ -1,93 +1,101 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
-.main-content{
-    width: 100%;
-    /* height:100vh; */
 
+.main-content {
+    width: 100%;
 }
-.main-container{
+
+.main-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
 
 }
-.sectone{
+
+.sectone {
     height: 100vh;
     overflow: hidden;
 }
-.bg img{
+
+.bg img {
     width: 110vw;
     height: 110vh;
 }
 
-.fgrocks{
-    position: absolute ;
+.fgrocks {
+    position: absolute;
     top: 30% !important;
-    z-index:5;
-  
+    z-index: 5;
+
 }
 
-.fgrocks img{
-    width:100%;
+.fgrocks img {
+    width: 100%;
     z-index: 100;
 }
 
-.bottomblend{
-    position: absolute ;
+.bottomblend {
+    position: absolute;
     width: 100vw !important;
     height: 100vh !important;
- 
+
 
     mix-blend-mode: screen;
 }
-.bottomblend img{
+
+.bottomblend img {
     z-index: 4;
 }
 
-.blend-layer{
+.blend-layer {
     position: absolute;
-    transform: translate(10%,50%) !important;
+    transform: translate(10%, 50%) !important;
     width: 100% !important;
     height: 100% !important;
     z-index: 2;
-    mix-blend-mode: screen; 
+    mix-blend-mode: screen;
 }
 
 
-.globe{
+.globe {
     position: absolute;
     left: 30% !important;
     top: -30% !important;
     z-index: 1;
     mix-blend-mode: screen;
 }
-.globe img{
+
+.globe img {
     width: 60% !important;
 }
-.text{
+
+.text {
     position: absolute;
     left: 10% !important;
     top: -30% !important;
     z-index: 0;
     mix-blend-mode: screen;
- 
+
 }
-.text img{
+
+.text img {
     width: 90% !important;
 }
-.rock{
-    position: absolute ;
+
+.rock {
+    position: absolute;
     left: 12% !important;
     top: 20% !important;
     z-index: 100;
 }
-.rock img{
+
+.rock img {
     width: 90% !important;
 
 }
-.upblend{
+
+.upblend {
     position: absolute;
     width: 17% !important;
     left: 38% !important;
@@ -96,28 +104,31 @@
     z-index: 4;
 }
 
-.fore-rocks{
+.fore-rocks {
     position: absolute;
 
     top: 2% !important;
 
     z-index: 2;
 }
-.fore-rocks img{
+
+.fore-rocks img {
     height: 110% !important;
 }
 
-.mobile-bg{
+.mobile-bg {
     display: none;
 }
-.violet-gradient{
-    background: radial-gradient( circle, rgb(65, 21, 122) 0%, rgb(129, 77, 177) 0%, rgb(86, 19, 195) 81%, rgb(111, 22, 214) 100% ) !important;
+
+.violet-gradient {
+    background: radial-gradient(circle, rgb(65, 21, 122) 0%, rgb(129, 77, 177) 0%, rgb(86, 19, 195) 81%, rgb(111, 22, 214) 100%) !important;
 }
-.scroll-indicator{
+
+.scroll-indicator {
     position: absolute;
-    top:95% !important;
+    top: 95% !important;
     left: 0;
-    right:0;
+    right: 0;
     margin-left: auto;
     margin-right: auto;
     z-index: 99;
@@ -130,9 +141,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
-}
-.scroll-indicator>div{
 
 }
 
@@ -141,49 +149,79 @@
     content: attr(data-ca3_icon);
 }
 
-
-
 .ca3-scroll-down-link {
-  cursor:pointer;
-  color:"red";
-	height: 60px;
-	width: 80px;
-	margin: 0px 0 0 -130px;
-	line-height: 60px;
-	position: absolute;
-	left: 50%;
-	bottom: 0px;
-	color: #FFF;
-	text-align: center;
-	font-size: 20px;
-	z-index: 100;
-	text-decoration: none;
-	text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4);
+    cursor: pointer;
+    color: "red";
+    height: 60px;
+    width: 80px;
+    margin: 0px 0 0 -130px;
+    line-height: 60px;
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    z-index: 100;
+    text-decoration: none;
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4);
 
-	-webkit-animation: ca3_fade_move_down 2s ease-in-out infinite;
-	-moz-animation:    ca3_fade_move_down 2s ease-in-out infinite;
-	animation:         ca3_fade_move_down 2s ease-in-out infinite;
+    -webkit-animation: ca3_fade_move_down 2s ease-in-out infinite;
+    -moz-animation: ca3_fade_move_down 2s ease-in-out infinite;
+    animation: ca3_fade_move_down 2s ease-in-out infinite;
 }
 
 
 /*animated scroll arrow animation*/
 @-webkit-keyframes ca3_fade_move_down {
-  0%   { -webkit-transform:translate(0,-20px); opacity: 0;  }
-  50%  { opacity: 1;  }
-  100% { -webkit-transform:translate(0,20px); opacity: 0; }
-}
-@-moz-keyframes ca3_fade_move_down {
-  0%   { -moz-transform:translate(0,-20px); opacity: 0;  }
-  50%  { opacity: 1;  }
-  100% { -moz-transform:translate(0,20px); opacity: 0; }
-}
-@keyframes ca3_fade_move_down {
-  0%   { transform:translate(0,-20px); opacity: 0;  }
-  50%  { opacity: 1;  }
-  100% { transform:translate(0,20px); opacity: 0; }
+    0% {
+        -webkit-transform: translate(0, -20px);
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        -webkit-transform: translate(0, 20px);
+        opacity: 0;
+    }
 }
 
-.outer-layer{
+@-moz-keyframes ca3_fade_move_down {
+    0% {
+        -moz-transform: translate(0, -20px);
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        -moz-transform: translate(0, 20px);
+        opacity: 0;
+    }
+}
+
+@keyframes ca3_fade_move_down {
+    0% {
+        transform: translate(0, -20px);
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: translate(0, 20px);
+        opacity: 0;
+    }
+}
+
+.outer-layer {
     position: relative;
     width: 120%;
     height: 100vh;
@@ -193,21 +231,21 @@
 }
 
 
-.layer1 img{
+.layer1 img {
     position: absolute;
-    top:0;
-    left:0;
-    width:100%;
+    top: 0;
+    left: 0;
+    width: 100%;
     z-index: 100;
     object-fit: contain;
     overflow: hidden;
-   
+
 }
 
-.layer2 img{
+.layer2 img {
     position: absolute;
-    top:0;
-    left:-20%;
+    top: 0;
+    left: -20%;
     width: 100%;
     height: auto;
     z-index: 500;
@@ -215,11 +253,11 @@
 }
 
 
-.layer3 img{
+.layer3 img {
     position: absolute;
-    top:25vh;
-    right:40%;
-    width:10%;
+    top: 25vh;
+    right: 40%;
+    width: 10%;
     z-index: 500;
     object-fit: contain;
     overflow: hidden;
@@ -228,57 +266,47 @@
 
 @keyframes slideInLeft {
     0% {
-      transform: translateX(-400%);
+        transform: translateX(-400%);
     }
+
     100% {
-      transform: translateX(0);
+        transform: translateX(0);
     }
-  }
-  
-  
+}
 
-
-
-#main_cry{
-    
-    font-size: 80px; 
-    /* animation: 1s ease-out 0s 1 slideInLeft; */
+#main_cry {
+    font-size: 80px;
     transition: 5s;
     font-family: 'Space Mono', monospace;
     font-weight: 1000;
-    color:#05ffa3;
+    color: #05ffa3;
 }
 
 
-#main_cry2{
-    
-    font-size: 20px; 
+#main_cry2 {
+    font-size: 20px;
     transition: 1s;
     font-weight: 100;
     font-family: 'Space Mono', monospace;
-
 }
 
-#main_cry3{
-    
-    font-size: 20px; 
+#main_cry3 {
+    font-size: 20px;
     transition: 1s;
     font-family: 'Space Mono', monospace;
-
 }
 
-.divdiv{
+.divdiv {
     position: absolute;
-    top:55%;
-    left:65%;
+    top: 55%;
+    left: 65%;
     width: 100%;
     text-align: center;
-    transform: translate(-50%,-50%);
-
+    transform: translate(-50%, -50%);
 }
 
 
-.floating { 
+.floating {
     animation-name: floating;
     animation-duration: 2s;
     animation-iteration-count: infinite;
@@ -286,52 +314,56 @@
     margin-left: 30px;
     margin-top: 5px;
 }
- 
+
 @keyframes floating {
-    0% { transform: translate(0,  0px); }
-    50%  { transform: translate(0, 20px); }
-    100%   { transform: translate(0, -0px); }   
+    0% {
+        transform: translate(0, 0px);
+    }
+
+    50% {
+        transform: translate(0, 20px);
+    }
+
+    100% {
+        transform: translate(0, -0px);
+    }
 }
 
 
 
-.layer4 img{
+.layer4 img {
     position: absolute;
-    top:15vh;
-    right:20%;
-    width:10%;
+    top: 15vh;
+    right: 20%;
+    width: 10%;
     z-index: 500;
     object-fit: contain;
     overflow: hidden;
-    
+
 }
 
 
 
-.layer5 img{
+.layer5 img {
     position: absolute;
-    top:45vh;
-    left:25%;
-    width:10%;
+    top: 45vh;
+    left: 25%;
+    width: 10%;
     z-index: 1000;
     object-fit: contain;
     overflow: hidden;
-   
+
 }
 
-.layer6 img{
+.layer6 img {
     position: absolute;
-    top:70vh;
-    left:-30px;
-    width:20%;
+    top: 70vh;
+    left: -30px;
+    width: 20%;
     z-index: 1000;
     object-fit: contain;
     overflow: hidden;
-   
+
 }
 
 /**/
-
-
-
-
