--- a/src/Styles/Committee.css
+++ b/src/Styles/Committee.css
@@ -1,3 +1,11 @@
+.committee-main-container {
+    width: 100%;
+    height: 100vh;
+    scroll-behavior: smooth;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 .committee-container {
     text-align: center;
     padding: 20px;
@@ -9,9 +17,6 @@
     color: #05ffa3;
     font-weight: 700;
 }
-
-
-
 
 .content-container-item {
     display: flex;
@@ -36,7 +41,7 @@
     object-fit: cover;
 }
 
-.commitee-name-x {
+.committee-name-x {
     text-align: justify;
     display: flex;
     flex-direction: column;
@@ -45,19 +50,19 @@
     padding: 10px;
 }
 
-.commitee-name-x>div>h1 {
+.committee-name-x>div>h1 {
     font-size: 20px;
     font-weight: 700;
     color: rgba(255, 255, 255, 0.9);
 }
 
-.commitee-name-x>div>p {
+.committee-name-x>div>p {
     font-size: 14px;
     font-weight: 600;
     color: rgba(255, 255, 255, 0.5);
 }
 
-.commitee-name-x>p {
+.committee-name-x>p {
     font-size: 14px;
     font-weight: 600;
     color: #05ffa3;
@@ -78,7 +83,7 @@
     font-weight: 700;
 }
 
-.commitee {
+.committee {
     width: 50%;
     height: 40%;
     margin: auto;
