--- a/src/Styles/ComponentsStyles/Button.css
+++ b/src/Styles/ComponentsStyles/Button.css
@@ -9,32 +9,30 @@
     padding: 7px 35px;
     font-weight: 700;
     width: 300px;
-   
-  }
-  
-  .button:before,
-  .button:after {
+
+}
+
+.button:before,
+.button:after {
     content: " ";
     position: absolute;
     border-radius: 99px;
-  }
-  
-  .button:before {
+}
+
+.button:before {
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     z-index: -2;
-    background: radial-gradient(
-      circle,
-      rgba(2, 0, 36, 1) 0%,
-      rgba(36, 180, 126, 1) 0%,
-      rgba(19, 195, 185, 1) 81%,
-      rgba(0, 212, 255, 1) 100%
-    );
-  }
-  
-  .button:after {
+    background: radial-gradient(circle,
+            rgba(2, 0, 36, 1) 0%,
+            rgba(36, 180, 126, 1) 0%,
+            rgba(19, 195, 185, 1) 81%,
+            rgba(0, 212, 255, 1) 100%);
+}
+
+.button:after {
     top: 4px;
     bottom: 4px;
     left: 4px;
@@ -43,4 +41,4 @@
     z-index: -1;
     opacity: 1;
     transition: all 0.6s ease-in-out;
-  }
+}
