--- a/src/Styles/Eventdetails.css
+++ b/src/Styles/Eventdetails.css
@@ -1,3 +1,8 @@
+.e-description>p {
+    text-align: justify;
+    text-indent: 20px;
+}
+
 .eventdetails {
     width: 100%;
     height: 100vh;
@@ -6,6 +11,7 @@
     overflow-x: hidden;
     position: relative;
     padding: 40px;
+    padding-right: 0px;
 }
 
 .back-btn-container {
@@ -33,14 +39,32 @@
     margin-top: 70px;
 }
 
+.image-container {
+    width: 80%;
+    margin: 0px auto;
+    height: 450px;
+    border-radius: 40px;
+    overflow: hidden;
+    object-fit: cover;
+    border-radius: 3px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: self-end;
+}
+
 .one {
-    min-width: 100%;
+    margin: 0px auto;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
 .one>img {
+    margin: 0px auto;
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
 
 }
@@ -63,21 +87,8 @@
     object-fit: cover;
 }
 
-.image-container {
-    width: 100%;
-    height: 400px;
-    border-radius: 40px;
-    overflow: hidden;
-    object-fit: cover;
-    border-radius: 3px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-}
-
 .event-content-container {
-
-    max-width: 80%;
+    max-width: 75%;
     margin: auto;
     flex-direction: row;
     justify-content: space-between;
@@ -400,8 +411,6 @@
 
 .faq-card {
     cursor: pointer;
-    max-width: 700px;
-
     border: 2px solid rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 10px;
@@ -432,14 +441,13 @@
 
 @media only screen and (max-width: 900px) {
 
-    .one > img {
+    .one>img {
         width: 100%;
-        max-height: 300px;
         object-fit: cover;
     }
 
     .eventdetails {
-        padding: 0px;
+        padding: 0;
         margin-top: 40px;
     }
 
@@ -448,13 +456,25 @@
     }
 
     .event-content-container {
-        max-width: 90%;
+        max-width: 80%;
         margin-top: 50px;
     }
 
     .image-container {
         flex-wrap: wrap;
         height: auto;
+        width: 95%;
+        margin: 0px auto;
+        height: auto;
+        border-radius: 40px;
+        overflow: hidden;
+        object-fit: cover;
+        border-radius: 3px;
+        overflow: hidden;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: self-end;
     }
 
     .trophies {
