--- a/src/Styles/AboutUs.css
+++ b/src/Styles/AboutUs.css
@@ -288,7 +288,106 @@
     gap: 30px 40px;
 }
 
+.manager-profile-container {
+    width: 200px;
+    height: 300px;
+    background-color: rgba(47, 48, 48, 0.2);
+    box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
+    border-radius: 5px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+
+}
+
+.img-hover {
+    border: 5px solid white !important;
+    border-radius: 50%;
+    z-index: 99;
+}
+
+.manager-profile-image {
+    width: 85px;
+    height: 100px;
+    border: 0px solid white;
+    transition: all 0.24s ease-in-out;
+}
+
+.manager-profile-name {
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--fg-white);
+}
+
+.manager-profile-description {
+    color: var(--fg-white);
+    line-height: 27px;
+    margin-bottom: 10px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.manager-social-links {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    flex-direction: row;
+    height: 0px;
+    background-color: var(--fg-green);
+    z-index: 999;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    transition: all 0.24s ease-in-out;
+    overflow: hidden;
+}
+
+.social-hover {
+    height: 40px;
+}
+
+.social-hover>i {
+    cursor: pointer;
+}
+
+.circle {
+    position: absolute;
+    background-color: var(--fg-green);
+    border-radius: 50%;
+    width: 300px;
+    height: 200px;
+    top: -800px;
+    transition: all 0.24s ease-in-out;
+}
+
+.circle-hover {
+    top: -80px
+}
+
+.managers {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 60px;
+    margin-top: 40px;
+    flex-wrap: wrap;
+}
+
 @media screen and (max-width: 789px) {
+
+    img,
+    #animation-container {
+        /* margin: 0px 15px; */
+    }
+
     .about-us-container {
         margin-top: 100px;
         flex-direction: column;
@@ -352,6 +451,12 @@
 }
 
 @media screen and (max-width: 900px) {
+
+    img,
+    #animation-container {
+        /* margin: 0px 15px; */
+    }
+
     .about-us {
         font-size: clamp(0.5rem, 2.5vw, 1rem);
     }
