--- a/src/Styles/Committee.css
+++ b/src/Styles/Committee.css
@@ -100,6 +100,10 @@
         margin-bottom: 50px;
     }
 
+    .content-container {
+        margin: 0px 25px;
+    }
+
     .content-container-item {
         display: flex;
         flex-direction: row;
