--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -103,6 +103,404 @@
     justify-content: center;
 }
 
+
+/* Caroussel */
+
+.caroussel-1{
+    height: 1000px;
+    width: 100%;
+    overflow: hidden;
+    position :relative;
+    /* border: 1px solid green; */
+
+    
+    /* background-color:#007ACC ; */
+
+    /* padding: 500px 0 500px 0; */
+}
+.caroussel-1 img{
+    height: 100%;
+    width: 100%;
+
+    position: relative;
+    z-index: 0;
+}
+
+.caroussel-1 .list{
+    position: absolute;
+    top: 0;
+    width: 80%;
+    /* border: 1px solid rgb(162, 19, 19); */
+
+    max-width: 90%;
+    left: 50%; 
+    transform: translateX(-50%);
+
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+}
+
+
+
+.caroussel-1 .list .item{
+
+    position: absolute;
+    width: 100%;
+
+    left: 50%; 
+    transform: translateX(-50%);
+    /* transform: translateX(-50%); */
+
+    display: flex;
+    align-items: center;
+
+    /* border: 1px solid rgb(151, 22, 123); */
+    border-radius: 10px;
+    height: 60%;
+}
+.caroussel-1 .list .item img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    /*border-bottom-left-radius: 20px;*/
+
+    /* left: 0; */
+    /* top:50%; */
+    /* transform: translateY(-50%); */
+}
+
+
+
+.caroussel-1 .list .item .content{
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: black;
+    color: white;
+    height: 100%;
+
+    padding: 30px 40px 30px 40px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+
+
+}
+
+
+.caroussel-1 .list .item .content h2{
+
+    font-weight: 400;
+    font-size: 40px;
+}
+
+.caroussel-1 .list .item .content p{
+
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.caroussel-1 .list .item .content a{
+
+    font-weight: 500;
+    font-size: 22px;
+
+    background-color: white;
+    color: black;
+    width: fit-content;
+
+    padding: 18px 28px;
+    border-radius: 10px;
+
+    text-decoration: none;
+}
+
+
+
+
+.caroussel-1 .list .item .content .tag{
+
+    background-color: #7d5bb7;
+    width: fit-content;
+    color: white;
+
+    padding: 5px 10px;
+    border-radius: 5px;
+
+
+}
+
+
+
+
+.caroussel-1 .list .item:nth-child(2) .content{
+    opacity: 1;
+    pointer-events: auto;
+    transition: opacity 0.5s;
+} 
+
+
+/* .caroussel-1 .list .item:nth-child(n+4){
+    opacity: 0;
+    pointer-events: none;
+} */
+
+.caroussel-1 .list .item:nth-child(2){
+    transform: translate(-50%);
+    z-index: 10;
+    opacity: 1;
+}
+.caroussel-1 .list .item:nth-child(1){
+    transform: translate(-146%) scale(0.8);
+    z-index: 9;
+    opacity: 1;
+}
+.caroussel-1 .list .item:nth-child(3){
+    transform: translate(45%) scale(0.8);
+    z-index: 9;
+    opacity: 1;
+}
+
+
+.arrows{
+    /* border: 1px solid black; */
+    position: absolute;
+    /* bottom: 10px; */
+    width: 88%;
+    max-width: 90%;
+
+    opacity: 0.4;
+    left:6%;
+    /* transform: translateX(-50%); */
+    display: flex;
+    justify-content: space-between;
+
+    top: 50%;
+    transform: translateY(-50%);
+    align-items: center;
+}
+
+.arrows #prev, .arrows #next{
+
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    font-family: monospace;
+    font-size: 50px;
+    /* font-weight: bold; */
+    border:1px solid #ffffff;
+    color: white;
+    padding-bottom: 7px;
+    background-color: transparent;
+}
+/* 
+.arrows #back{
+
+    font-weight: 500;
+    border: none;
+    border-bottom: 1px solid #555;
+    letter-spacing: 3px;
+    background-color: transparent;
+    opacity: 0;
+    pointer-events: none;
+
+} */
+.caroussel-1.next .list .item:nth-child(4){
+    animation: positionItemn4 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItemn4 {
+    from{
+        transform: translate(146%) scale(0.8);
+        z-index: 8;
+        opacity: 1;
+    }
+}
+
+
+.caroussel-1.next .list .item:nth-child(3){
+    animation: positionItemn1 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItemn1 {
+    from{
+        transform: translate(-146%) scale(0.8);
+        z-index: 9;
+        opacity: 1;
+    }
+}
+
+
+.caroussel-1.next .list .item:nth-child(2){
+    animation: positionItemn3 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItemn3 {
+    from{
+        transform: translate(45%) scale(0.8);
+        z-index: 10;
+        opacity: 1;
+    }
+}
+
+
+.caroussel-1.next .list .item:nth-child(1){
+    animation: positionItemn2 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItemn2 {
+    from{
+        transform: translate(-50%);
+        z-index: 11;
+        opacity: 1;
+    }
+}
+.caroussel-1.prev .list .item:nth-child(2){
+    animation: positionItem2 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem2 {
+    from{
+        transform: translate(-146%) scale(0.8);
+        z-index: 9;
+        opacity: 1;
+    }
+}
+
+.caroussel-1.prev .list .item:nth-child(3){
+    animation: positionItem3 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem3 {
+    from{
+        transform: translate(45%) scale(0.8);
+        z-index: 10;
+        opacity: 1;
+    }
+}
+
+.caroussel-1.prev .list .item:nth-child(4){
+    animation: positionItem4 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem4 {
+    from{
+        transform: translate(146%) scale(0.8);
+        z-index: 11;
+        opacity: 1;
+    }
+}
+
+.caroussel-1.prev .list .item:nth-child(1){
+    animation: positionItem1 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem1 {
+    from{
+        transform: translate(-50%);
+        z-index: 8;
+        opacity: 1;
+    }
+}
+
+
+
+
+
+
+
+
+/*
+.caroussel-1.next .list .item:nth-child(3){
+    animation: positionItemn1 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItemn1 {
+    from{
+        transform: translate(-146%) scale(0.8);
+
+        /* transform: translate(45%) scale(0.8);
+        z-index: 9;
+        opacity: 1;
+    }
+}
+
+
+.caroussel-1.next .list .item:nth-child(2){
+    animation: positionItemn3 0.9s ease-in-out 1 forwards;
+}
+@keyframes positionItemn3 {
+    from{
+        /* transform: translate(-146%) scale(0.8); 
+        transform: translate(45%) scale(0.8);
+
+        z-index: 10;
+        opacity: 1;
+    }
+}*/
+
+
+/* 
+.caroussel-1.next .list .item:nth-child(1){
+    animation: positionItemn2 0.9s ease-in-out 1 forwards;
+}
+@keyframes positionItemn2 {
+    from{
+        transform: translate(-50%);
+        z-index: 11;
+        opacity: 1;
+    }
+}
+
+
+
+
+
+
+.caroussel-1.prev .list .item:nth-child(2){
+    animation: positionItem1 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem2 {
+    from{
+        transform: translate(-50%);
+        z-index: 10;
+        opacity: 1;
+    }
+}
+
+.caroussel-1.prev .list .item:nth-child(3){
+    animation: positionItem2 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem1 {
+    from{
+        transform: translate(-146%) scale(0.8);
+        z-index: 9;
+        opacity: 1;
+    }
+}
+
+.caroussel-1.prev .list .item:nth-child(1){
+    animation: positionItem3 0.9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem3 {
+    from{
+        transform: translate(45%) scale(0.8);
+        z-index: 9;
+        opacity: 1;
+    }
+} */
+
+
+
+
 /* below 900px */
 @media only screen and (max-width: 900px) {
     .home-content {
