--- a/src/Styles/Committee.css
+++ b/src/Styles/Committee.css
@@ -107,8 +107,7 @@
     .content-container-item {
         display: flex;
         flex-direction: row;
-        margin: 0px;
-        margin-top: 50px;
+        margin-left: 30px;
         width: 350px;
     }
 
