--- a/src/Styles/Events.css
+++ b/src/Styles/Events.css
@@ -297,3 +297,93 @@
 
     }
 }
+
+@media only screen and (max-width: 750px) {
+    .events {
+        width: 100%;
+        height: 100vh;
+        overflow-y: auto;
+        overflow-x: hidden;
+        padding: 5px;
+    }
+
+    .events-header {
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-top: 60px;
+        font-size: 16px;
+        letter-spacing: 0.02px;
+        -webkit-text-stroke-width: 0.7px;
+        -webkit-text-stroke-color: var(--fg-white);
+        color: transparent;
+        cursor: pointer;
+        font-weight: 700;
+        line-height: 67px;
+        letter-spacing: 1px;
+        font-weight: 900;
+        flex-wrap: wrap;
+        margin-bottom: 10px;
+    }
+
+    .events-body {
+        display: flex;
+        flex-direction: column;
+        max-width: 90%;
+        margin: 0px auto;
+        gap: 30px;
+        margin-top: 30px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        width: 100%;
+        padding-top: 0px;
+    }
+
+    .events-header>h1:nth-child(2) {
+        position: relative;
+        padding: 0px 10px;
+    }
+
+    .events-header>h1:first-child {
+        position: relative;
+        padding: 0px 10px;
+    }
+
+    .events-header>h1:last-child {
+        position: relative;
+        padding: 0px 10px;
+    }
+
+    .event-card {
+        margin: 0px auto;
+        width: 300px;
+        height: 220px;
+        background-color: rgba(38, 38, 43, 0.6);
+        border-radius: 5px;
+        border-top: 3px solid yellow;
+        padding: 0px !important;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .event-card-body {
+        font-size: 15px;
+        font-weight: 900;
+        color: var(--fg-white);
+        margin-top: 10px;
+        padding: 5px;
+        font-family: var(--font-secondary);
+        letter-spacing: 1px;
+    }
+
+    #general-event {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        z-index: 5000;
+        font-size: 30px;
+
+    }
+}
