--- a/src/Styles/ComponentsStyles/Navbar.css
+++ b/src/Styles/ComponentsStyles/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     width: 300px;
     height: 100vh;
-    padding: 50px 0px 50px 60px;
+    padding: 0px 0px 0px 60px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -24,12 +24,12 @@
     font-size: 15px;
     line-height: 28px;
     display: flex;
-    gap: 24px;
+    gap: 20px;
     flex-direction: column;
     letter-spacing: 1px;
     height: auto;
     white-space: nowrap;
-    overflow: hidden;
+    /* overflow: hidden; */
     transition: 1s ease-in-out;
 }
 
