--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,10 @@
     --fg-white: #FFFFFF;
     --font-primary: gilroy;
     --font-secondary: gilroy-thin;
-    --fg-g: #24B47E
+    --fg-g: #24B47E;
 }
 
-body,
-html {
+body, html {
     padding: 0%;
     margin: 0%;
     background-color: var(--bg-black);
