--- a/src/Styles/ComponentsStyles/Navbar.css
+++ b/src/Styles/ComponentsStyles/Navbar.css
@@ -5,7 +5,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .navbar-logo {
