--- a/src/Styles/ComponentsStyles/Navbar.css
+++ b/src/Styles/ComponentsStyles/Navbar.css
@@ -6,6 +6,7 @@
     flex-direction: row;
     height: auto;
     align-items: center;
+    margin-left:-10px;
 }
 
 .navbar {
@@ -16,6 +17,32 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+}
+
+.countdown
+{
+    width:100%;
+    height:40px;
+    /* background-color: blue; */
+    margin: 0;
+    position:absolute;
+    left:0;
+    right:0;
+    bottom:50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.countdown p
+{
+    font-size: 18px;
+}
+.countdown .tagName
+{
+    margin-left: -5px;
+    font-size: 17px;
 }
 
 .navbar-logo {
@@ -74,3 +101,4 @@
 .social-links a i:hover{
     color:#05ffa3;
 }
+
