--- a/src/Styles/ComponentsStyles/Navbar.css
+++ b/src/Styles/ComponentsStyles/Navbar.css
@@ -1,12 +1,12 @@
 .social-links {
     width: 100%;
-    line-height: 200px;
+    line-height: 100px;
     display: flex;
-    gap: 20px;
+    gap: 10px;
     flex-direction: row;
     height: auto;
     align-items: center;
-    margin-left:-10px;
+    margin-left:30px;
 }
 
 .navbar {
@@ -23,12 +23,9 @@
 {
     width:100%;
     height:40px;
-    /* background-color: blue; */
+    padding: 0;
     margin: 0;
-    position:absolute;
-    left:0;
-    right:0;
-    bottom:50px;
+    margin-left: -25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -37,11 +34,12 @@
 
 .countdown p
 {
-    font-size: 18px;
+    /* margin-left: -120px; */
+    font-size: 16px;
 }
 .countdown .tagName
 {
-    margin-left: -5px;
+    /* margin-left: -125px; */
     font-size: 17px;
 }
 
