--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -101,8 +101,8 @@
 }
 
 .caroussel-1 {
-    height: 1000px;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
     position: relative;
 }
@@ -114,28 +114,30 @@
 }
 
 .bg{
-    visibility:hidden;
+    border: none;
+    /* visibility:hidden; */
 }
 .caroussel-1 .list {
     position: absolute;
     top: 0;
-    width: 80%;
-    max-width: 90%;
+    width: 70%;
+    height: 100%;
+    /* max-width: 90%; */
     left: 50%;
     transform: translateX(-50%);
-    height: 100%;
     display: flex;
     align-items: center;
 }
 
+
 .caroussel-1 .list .item {
     position: absolute;
     width: 100%;
+    height: 80%;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
     border-radius: 10px;
-    height: 60%;
 }
 
 .item-button {
@@ -251,13 +253,12 @@
 
 .arrows {
     position: absolute;
-    width: 90%;
-    max-width: 100%;
+    width: 78%;
     opacity: 0.4;
-    left: 5%;
+    left: 11%;
     display: flex;
     justify-content: space-between;
-    z-index: 9;
+    z-index: 1;
     top: 50%;
     transform: translateY(-50%);
     align-items: center;
@@ -374,10 +375,10 @@
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1150px) {
     .caroussel-1 {
         margin-top: 5%;
-        height: 130vh;
+        height: 100vh;
     }
 
     .caroussel-1 .list .item .item-button {
@@ -415,8 +416,8 @@
 
 @media screen and (max-width: 768px) {
     .caroussel-1 {
-        margin-top: 5%;
-        height: 130vh;
+        margin-top: 17%;
+        height: 100vh;
     }
 
     .home.main-section {
@@ -465,8 +466,8 @@
 
 @media screen and (max-width: 680px) {
     .caroussel-1 {
-        margin-top: 5%;
-        height: 130vh;
+        margin-top: 17%;
+        height: 100vh;
     }
 }
 
